--- a/css/custom.css
+++ b/css/custom.css
@@ -99,18 +99,18 @@ a:hover {
 
 .intro {
   padding: 95px 0px 70px 0px;
-  overflow-x: hidden; }
+  overflow-x: visible; }
   .intro img {
     width: 81px;
     height: 81px;
     border-radius: 99px; }
   .intro .wrap {
-    margin: 30px 0px; }
+    margin: 0px 0px; }
   .intro h1:before {
     position: absolute;
     left: -220px;
-    top: -150px;
-    font-size: 170px;
+    top: -180px;
+    font-size: 190px;
     z-index: -1;
     color: #f4f4f4; }
   .intro h1 span {
